# tars-work-assistant

./: .gitignore  .mcp.json  ARCHITECTURE.md  BUILD.md  CATALOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  GETTING-STARTED.md  LICENSE  MIGRATION_HANDOFF.md  NOTICE  README.md  REBUILD_HANDOFF.md  ROADMAP.md  TARS_REBUILD_FOUNDATION.md  TARS_V2_REBUILD_PLAN.md  TARS_V3_INSTANCE_MIGRATION_PLAN.md  TARS_V3_REBUILD_PLAN.md  Temp.md  build-plugin.sh  marketplace.json  requirements-search.txt  requirements.txt
mcp/tars-vault/: README.md  pyproject.toml
mcp/tars-vault/src/tars_vault/: __init__.py  __main__.py  _common.py  activity_ledger.py  alias_registry.py  obsidian_cli.py  organize.py  sanitize.py  search_index.py  server.py  telemetry.py  validators.py  wikilink.py  wikilink_pass.py
mcp/tars-vault/src/tars_vault/tools/: __init__.py  append_note.py  archive_candidates.py  archive_note.py  classify_file.py  context_bundle.py  context_gaps.py  create_note.py  detect_near_duplicates.py  entity_timeline.py  extension_common.py  format_wikilink.py  fts_search.py  install_extension.py  list_extensions.py  move_note.py  read_extension.py  read_note.py  read_system_file.py  refresh_integrations.py  rerank.py  resolve_alias.py  resolve_capability.py  resolve_extension.py  runtime_info.py  scaffold_extension.py  scaffold_workspace.py  scan_secrets.py  search_by_tag.py  semantic_search.py  update_frontmatter.py  validate_extension.py  workspace_map.py  (+1 more)
mcp/tars-vault/tests/: conftest.py  run_stdlib_suite.py  test_search_index.py  test_skeleton.py  test_tools.py
(+272 files in other folders)
