[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tars-vault"
version = "3.4.3"
description = "TARS local helper: validated Markdown writes, wikilink checks, FTS search, optional semantic search, integration resolver"
requires-python = ">=3.10"
license = {text = "PolyForm-Noncommercial-1.0.0"}
authors = [{name = "Ajay John"}]
dependencies = [
]

[project.optional-dependencies]
mcp-sdk = [
  "mcp>=1.0,<2.0",
]
search = [
  "fastembed>=0.4,<1.0",
  "sqlite-vec>=0.1.6,<0.2",
]

[project.scripts]
tars-vault = "tars_vault.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
